--- a/requirements.txt
+++ b/requirements.txt
@@ -24,10 +24,12 @@ nbconvert==5.3.1
 nbformat==4.4.0
 notebook==5.1.0
 numpy==1.13.3
+olefile==0.44
 pandocfilters==1.4.2
 parso==0.1.0
 pexpect==4.2.1
 pickleshare==0.7.4
+Pillow==4.3.0
 prompt-toolkit==1.0.15
 protobuf==3.4.0
 ptyprocess==0.5.2
